@@ -511,6 +511,7 @@ R_PROG_CPP_CPPFLAGS
 R_PROG_F77
 AC_PROG_CXX
 AC_PROG_CXXCPP
+R_GCC4_VISIBILITY
 
 ## Libtool.
 ## (Run this after R_PROG_F77, as AC_PROG_LIBTOOL checks for a
