@@ -5,6 +5,7 @@
 include $(R_SHARE_DIR)/make/vars.mk
 
 BLAS_LIBS = @BLAS_LIBS@
+C_VISIBILITY = @C_VISIBILITY@
 CC = @CC@
 CFLAGS = @CFLAGS@
 CPICFLAGS = @CPICFLAGS@
@@ -21,6 +22,7 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 F77 = @F77@
+F77_VISIBILITY = @F77_VISIBILITY@
 FC = @FC@
 FCFLAGS = @FCFLAGS@
 FFLAGS = @FFLAGS@
