@@ -80,7 +80,11 @@ static const R_CallMethodDef callMethods[] = {{"L_initGrid", (DL_FUNC)&L_initGri
                                               {"L_xsplineBounds", (DL_FUNC)&L_xsplineBounds, 8},
                                               {NULL, NULL, 0}};
 
-void R_init_grid(DllInfo *dll)
+void
+#ifdef HAVE_VISIBILITY_ATTRIBUTE
+    __attribute__((visibility("default")))
+#endif
+    R_init_grid(DllInfo *dll)
 {
     /* No .C, .Fortran, or .External routines => NULL
      */
