@@ -50,7 +50,11 @@ static R_CallMethodDef CallEntries[] = {CALLDEF(R_M_setPrimitiveMethods, 5),
                                         CALLDEF(do_substitute_direct, 2),
                                         {NULL, NULL, 0}};
 
-void R_init_methods(DllInfo *dll)
+void
+#ifdef HAVE_VISIBILITY_ATTRIBUTE
+    __attribute__((visibility("default")))
+#endif
+    R_init_methods(DllInfo *dll)
 {
     R_registerRoutines(dll, NULL, CallEntries, NULL, NULL);
     R_useDynamicSymbols(dll, FALSE);
