@@ -32,7 +32,11 @@ static const R_CallMethodDef callMethods[] = {
 
 static const R_CMethodDef CEntries[] = {{"Renctest", (DL_FUNC)&Renctest, 1}, {NULL, NULL, 0}};
 
-void R_init_tools(DllInfo *dll)
+void
+#ifdef HAVE_VISIBILITY_ATTRIBUTE
+    __attribute__((visibility("default")))
+#endif
+    R_init_tools(DllInfo *dll)
 {
     R_registerRoutines(dll, CEntries, callMethods, NULL, NULL);
     R_useDynamicSymbols(dll, FALSE);
